--- a/ATM_MVC/Views/Home/Contact.cshtml
+++ b/ATM_MVC/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
 
 <address>
     One Microsoft Way<br />
@@ -15,3 +15,9 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<h3>@ViewBag.Message</h3>
+<form method="post" class="form-horizontal">
+    <textarea name="message" class="form-control"></textarea>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
